--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@ import '../styles/components/header.scss'
 ---
 <header id="header">
     <a class="logo-link" href="/">
-        <img class="logo" src="/Logo.png">
+        <img class="logo" src="/logo.png">
     </a>
     <nav class="nav">
         <button onclick="goToUrl(this)" data-href="/">Home</button>
