--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import '../styles/root.scss'
 
 import Header from '../components/header.astro'
 
-var sName = 'RockGamerAK / Adarsh Kumar'
+var sName = 'Adarsh Kumar'
 
 var { title, pTitle, classItems, inlineStyles } = Astro.props;
 
