--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ if (!!classItems === false) classItems = ''
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
   </head>
   <body>
-    <Header />
+    <Header logo="/logo.jpg" />
     <h1 id="page-title">{pTitle}</h1>
     <main id="content" align="center">
       <div id="main-content" class={classItems} style={inlineStyles}>
