--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -19,6 +19,8 @@ header .logo {
   width: 80px;
   height: auto;
   border-radius: 100%;
+
+  transition: border-radius 1s ease;
 }
 
 header .logo:is(:hover, :focus) {
