--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/components/header.scss'
 
-var { Logo } = Astro.props
+var { logo } = Astro.props
 
 ---
 <header id="header">
