create and use [portfolio.[astro, scss], grid.scss]

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -1,5 +1,5 @@
 :root {
-    --font-family: 'Montserrat', sans-serif !important;
+    --font-family: 'Inter', sans-serif !important;
     --background-primary-color: #18181a;
     --background-secondary-color: #292929;
     --foreground-primary-color: #b8b8b8;
