--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -26,6 +26,7 @@
 
         display: grid;
 
+        background-color: var(--foreground-secondary-color);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
