update portfolio.astro and show on nva bar

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,7 +12,7 @@ var { logo } = Astro.props
         <button onclick="goToUrl(this)" data-href="/">Home</button>
         <button onclick="goToUrl(this)" data-href="/about">About</button>
         <button onclick="goToUrl(this)" data-href="/contact">Contact</button>
-        <!-- <button onclick="goToUrl(this)" data-href="/portfolio">Portfolio</button> -->
+        <button onclick="goToUrl(this)" data-href="/portfolio">Portfolio</button>
         <button onclick="goToUrl(this)" data-href="/projects">Projects</button>
         <button onclick="goToUrl(this)" data-data-href="https://Blog.RockGamerAK.com" data-target="_blank">Blog</button>
         <!-- <button onclick="goToUrl(this)" data-href="/sites">Sites</button> -->
