--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -7,17 +7,17 @@ import Layout from '../layouts/Layout.astro'
 <Layout title="Portfolio">
   <section class="grid">
     <div class="item">
-      <a href="projects/weather.html" target="_blank" class="image-link" style="background-image: url('projects/weather.svg');"></a>
+      <a href="https://Graphics-for-Good.com" target="_blank" class="image-link" style="background-image: url('https://image.thum.io/get/maxAge/12/width/1920/https://graphics-for-good.com');"></a>
       <div>
         <a href="projects/weather.html"target="_blank" >
-          <h3>A Weather Application</h3>
+          <h3>Graphics for Good</h3>
         </a>
         <div class="description">
-          <span>Not actually an assignment, but ZyBooks talked about OpenWeatherMap so I decided to make it.</span>
+          <span>I helped develop and an the Lead Website Designer and Manager!</span>
         </div>
       </div>
     </div>
-    <div class="item">
+    <!-- <div class="item">
       <a href="projects/CSS-practice.html" target="_blank" class="image-link" style="background-image: url('projects/CSS-practice.svg');"></a>
       <div>
         <a href="projects/CSS-practice.html" target="_blank">
@@ -27,8 +27,8 @@ import Layout from '../layouts/Layout.astro'
           <span>A small file that ZyBooks had us use to practice some easy CSS.</span>
         </div>
       </div>
-    </div>
-    <div class="item">
+    </div> -->
+    <!-- <div class="item">
       <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link" style="background-image: url('projects/recipe-with-flexbox/oatmeal_cookies.svg');"></a>
       <div>
         <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank">
@@ -38,8 +38,8 @@ import Layout from '../layouts/Layout.astro'
           <span>A recipe page for oatmeal cookies that you can use to make your own.</span>
         </div>
       </div>
-    </div>
-    <div class="item">
+    </div> -->
+    <!-- <div class="item">
       <a href="projects/quotes-application.html" target="_blank" class="image-link" style="background-image: url('projects/quotes-application.svg');"></a>
       <div>
         <a href="projects/quotes-application.html" target="_blank">
@@ -49,8 +49,8 @@ import Layout from '../layouts/Layout.astro'
           <span>A web-app that displayed quotes from the ZyBooks Quote API.</span>
         </div>
       </div>
-    </div>
-    <div class="item">
+    </div> -->
+    <!-- <div class="item">
       <a href="projects/temperature-converter/" target="_blank" class="image-link" style="background-image: url('projects/temperature-converter.svg')"></a>
       <div>
         <a href="projects/temperature-converter/" target="_blank">
@@ -60,8 +60,8 @@ import Layout from '../layouts/Layout.astro'
           <span>A neat web-app that converts temperature including Kelvin.</span>
         </div>
       </div>
-    </div>
-    <div class="item">
+    </div> -->
+    <!-- <div class="item">
       <a href="projects/rate.html" target="_blank" class="image-link" style="background-image: url('projects/rate.svg');"></a>
       <div>
         <a href="projects/rate.html" target="_blank">
@@ -71,6 +71,6 @@ import Layout from '../layouts/Layout.astro'
           <span>A form that people can use as a way for customers rating products.</span>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 </Layout>
