--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -5,9 +5,9 @@ import '../styles/pages/portfolio.scss'
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Portfolio">
-  <section class="grid">
+  <section class="grid" class="portfolio">
     <div class="item">
-      <a href="https://Graphics-for-Good.com" target="_blank" class="image-link" style="background-image: url('https://image.thum.io/get/maxAge/12/width/1920/https://graphics-for-good.com');"></a>
+      <a href="https://Graphics-for-Good.com" target="_blank" class="image-link"></a>
       <div>
         <a href="projects/weather.html"target="_blank" >
           <h3>Graphics for Good</h3>
@@ -73,4 +73,9 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div> -->
   </section>
+  <script>
+    document.querySelectorAll('.grid.portfolio .item a').forEach(function(a, i) {
+      a.style.backgroundImage = `https://image.thum.io/get/maxAge/12/width/${a.clientWidth}/${a.href}`
+    })
+  </script>
 </Layout>
