--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro'
           <h3>Graphics for Good</h3>
         </a>
         <div class="description">
-          <span>I helped develop and an the Lead Website Designer and Manager!</span>
+          <span>I helped develop and am the Lead Website Designer and Manager!</span>
         </div>
       </div>
     </div>
