--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro'
 <Layout title="Portfolio">
   <section class="grid" class="portfolio">
     <div class="item">
-      <a href="https://Graphics-for-Good.com" target="_blank" class="image-link"></a>
+      <a href="https://graphics-for-good.com" target="_blank" class="image-link"></a>
       <div>
         <a href="projects/weather.html"target="_blank" >
           <h3>Graphics for Good</h3>
