--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -5,7 +5,7 @@ import '../styles/pages/portfolio.scss'
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Portfolio">
-  <section class="grid" class="portfolio">
+  <section class="grid portfolio">
     <div class="item">
       <a href="https://graphics-for-good.com" target="_blank" class="image-link"></a>
       <div>
@@ -74,7 +74,7 @@ import Layout from '../layouts/Layout.astro'
     </div> -->
   </section>
   <script is:inline>
-    document.querySelectorAll('.grid.portfolio .item a').forEach(function(a, i) {
+    document.querySelectorAll('.grid.portfolio .item .image-link').forEach(function(a, i) {
       a.style.backgroundImage = `https://image.thum.io/get/maxAge/12/width/${a.clientWidth}/${a.href}`
     })
   </script>
