--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div>
     <!-- <div class="item">
-      <a href="projects/CSS-practice.html" target="_blank" class="image-link" style="background-image: url('projects/CSS-practice.svg');"></a>
+      <a href="projects/CSS-practice.html" target="_blank" class="image-link"</a>
       <div>
         <a href="projects/CSS-practice.html" target="_blank">
           <h3>CSS Practice</h3>
@@ -29,7 +29,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div> -->
     <!-- <div class="item">
-      <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link" style="background-image: url('projects/recipe-with-flexbox/oatmeal_cookies.svg');"></a>
+      <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link"</a>
       <div>
         <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank">
           <h3>Recipe with Flexbox</h3>
@@ -40,7 +40,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div> -->
     <!-- <div class="item">
-      <a href="projects/quotes-application.html" target="_blank" class="image-link" style="background-image: url('projects/quotes-application.svg');"></a>
+      <a href="projects/quotes-application.html" target="_blank" class="image-link"</a>
       <div>
         <a href="projects/quotes-application.html" target="_blank">
           <h3>Quotes Application</h3>
@@ -51,7 +51,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div> -->
     <!-- <div class="item">
-      <a href="projects/temperature-converter/" target="_blank" class="image-link" style="background-image: url('projects/temperature-converter.svg')"></a>
+      <a href="projects/temperature-converter/" target="_blank" class="image-link"></a>
       <div>
         <a href="projects/temperature-converter/" target="_blank">
           <h3>Temperature Converter</h3>
@@ -62,7 +62,7 @@ import Layout from '../layouts/Layout.astro'
       </div>
     </div> -->
     <!-- <div class="item">
-      <a href="projects/rate.html" target="_blank" class="image-link" style="background-image: url('projects/rate.svg');"></a>
+      <a href="projects/rate.html" target="_blank" class="image-link"</a>
       <div>
         <a href="projects/rate.html" target="_blank">
           <h3>Product Rating</h3>
