--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -75,7 +75,7 @@ import Layout from '../layouts/Layout.astro'
   </section>
   <script is:inline>
     document.querySelectorAll('.grid.portfolio .item .image-link').forEach(function(a, i) {
-      a.style.backgroundImage = `url('https://image.thum.io/get/maxAge/12/width/${a.clientWidth}/${a.href}')'`
+      a.style.backgroundImage = `url('https://image.thum.io/get/maxAge/12/width/${a.clientWidth}/${a.href}')`
     })
   </script>
 </Layout>
