--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -24,7 +24,7 @@ header .logo {
   align-items: center;
   text-decoration: none;
 
-  transition: border-radius 1s ease;
+  transition: border-radius 1s ease-out;
 }
 
 header .logo:is(:hover, :focus) {
