--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -13,6 +13,18 @@
     gap: var(--gap);
 }
 
+.grid {
+    &:not(:has(.item + .item + .item)) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    &:not(:has(.item + .item)) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    &:not(:has(.item)) {
+        grid-template-columns: repeat(0, 1fr);
+    }
+}
+
 .grid .item {
     // height: fit-content;
 
