--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -18,7 +18,9 @@
         grid-template-columns: repeat(0, 1fr);
     }
     &:not(:has(.item + .item)) {
-        grid-template-columns: repeat(1, 1fr);
+        .item {
+            grid-column: 2 / -2;
+        }
     }
     &:not(:has(.item + .item + .item)) {
         grid-template-columns: repeat(2, 1fr);
