--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -19,19 +19,19 @@ import PortfolioContent from '../components/PortfolioContent.astro'
           </div>
         </div>
       </div>
-      <!-- <div class="item">
-        <a href="projects/CSS-practice.html" target="_blank" class="image-link"</a>
+      <div class="item">
+        <a href="https://megangillespiemezzo.com/" target="_blank" class="image-link"></a>
         <div>
-          <a href="projects/CSS-practice.html" target="_blank">
-            <h3>CSS Practice</h3>
+          <a href="https://megangillespiemezzo.com/" target="_blank">
+            <h3>Megan Gillespie</h3>
           </a>
           <div class="description">
-            <span>A small file that ZyBooks had us use to practice some easy CSS.</span>
+            <span>I did a two week internship through my school with the best ever Megan Gillespie which consisted of fixing up, editing, and streamining her website.</span>
           </div>
         </div>
-      </div> -->
+      </div>
       <!-- <div class="item">
-        <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link"</a>
+        <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link"></a>
         <div>
           <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank">
             <h3>Recipe with Flexbox</h3>
@@ -42,7 +42,7 @@ import PortfolioContent from '../components/PortfolioContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="projects/quotes-application.html" target="_blank" class="image-link"</a>
+        <a href="projects/quotes-application.html" target="_blank" class="image-link"></a>
         <div>
           <a href="projects/quotes-application.html" target="_blank">
             <h3>Quotes Application</h3>
@@ -64,7 +64,7 @@ import PortfolioContent from '../components/PortfolioContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="projects/rate.html" target="_blank" class="image-link"</a>
+        <a href="projects/rate.html" target="_blank" class="image-link"></a>
         <div>
           <a href="projects/rate.html" target="_blank">
             <h3>Product Rating</h3>
