--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -14,10 +14,8 @@
 }
 
 .grid {
-    &:not(:has(.item + .item + .item)) {
-        .item:last-child {
-            grid-column: -2 / -1;
-        }
+    &:not(:has(.item + .item + .item)):not(:has(.item + .item)) {
+        grid-template-columns: repeat(2, 1fr);
     }
     &:not(:has(.item + .item)) {
         .item {
