--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -15,7 +15,7 @@ import PortfolioContent from '../components/PortfolioContent.astro'
             <h3>Graphics for Good</h3>
           </a>
           <div class="description">
-            <span>I helped develop and am the Lead Website Designer and Manager!</span>
+            <span>I helped develop and am the Lead Website Designer and Manager of the Graphics for Good Club at my school.</span>
           </div>
         </div>
       </div>
