--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -26,7 +26,7 @@ import PortfolioContent from '../components/PortfolioContent.astro'
             <h3>Megan Gillespie</h3>
           </a>
           <div class="description">
-            <span>I did a two week internship through my school with the best ever Megan Gillespie which consisted of fixing up, editing, and streamining her website.</span>
+            <span>I did a two week internship through my school with the best ever Megan Gillespie, which consisted of fixing up, editing, and streamining her website.</span>
           </div>
         </div>
       </div>
