--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -14,12 +14,21 @@
 
     &:not(:has(.item + .item + .item)):has(.item + .item) {
         grid-template-columns: repeat(2, 1fr);
+        .item {
+            border-width: 1.5px;
+        }
     }
     &:not(:has(.item + .item)):has(.item) {
         grid-template-columns: repeat(1, 1fr);
+        .item {
+            border-width: 2px;
+        }
     }
     &:not(:has(.item)) {
         grid-template-columns: repeat(0, 1fr);
+        .item {
+            border: none;
+        }
     }
 }
 
