--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -11,7 +11,7 @@ import PortfolioContent from '../components/PortfolioContent.astro'
       <div class="item">
         <a href="https://graphics-for-good.com" target="_blank" class="image-link"></a>
         <div>
-          <a href="projects/weather.html"target="_blank" >
+          <a href="https://graphics-for-good.com"target="_blank" >
             <h3>Graphics for Good</h3>
           </a>
           <div class="description">
