--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,5 +2,5 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="" inlineStyles="display: grid;">
-  <iframe frameborder="0" src="https://Blog.RockGamerAK.com" style="background: white;"></iframe>
+  <iframe frameborder="0" src="https://Blog.RockGamerAK.com" style="background: white; position: absolute; inset: 0;"></iframe>
 </Layout>
