--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,8 @@ if (pTitle === 'Home') {
   title = title.split(' | ')[1]
 }
 
-if (!!classItems === false) classItems = ''
+var className = `${classItems} main-content`
+if (className.startsWith(' ')) className = className.substring(1)
 
 ---
 
@@ -39,7 +40,7 @@ if (!!classItems === false) classItems = ''
     <Header logo={logoSRC} />
     <h1 id="page-title">{pTitle}</h1>
     <main id="content" align="center">
-      <div id="main-content" class={classItems} style={inlineStyles}>
+      <div class={className} style={inlineStyles}>
         <slot />
       </div>
     </main>
