--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,6 +54,11 @@ main > #main-content {
     height: 100%;
 }
 
+.main-content {
+    box-sizing: border-box;
+    padding: 8px;
+}
+
 hr[isDivider] {
     display: none;
     margin-top: 0;
