--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -3,10 +3,10 @@ import '../styles/grid.scss'
 import '../styles/pages/portfolio.scss'
 
 import Layout from '../layouts/Layout.astro'
-import PortfolioContent from '../components/PortfolioContent.astro'
+import SiteGridContent from '../components/SiteGridContent.astro'
 ---
 <Layout title="Portfolio">
-  <PortfolioContent>
+  <SiteGridContent>
     <section class="grid portfolio">
       <div class="item">
         <a href="https://graphics-for-good.com" target="_blank" class="image-link"></a>
@@ -75,5 +75,5 @@ import PortfolioContent from '../components/PortfolioContent.astro'
         </div>
       </div> -->
     </section>
-  </PortfolioContent>
+  </SiteGridContent>
 </Layout>
