--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -9,7 +9,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
   <SiteGridContent>
     <section class="grid portfolio">
       <div class="item">
-        <a href="https://graphics-for-good.com" target="_blank" class="image-link"></a>
+        <a href="https://graphics-for-good.com" target="_blank" class="image-link" />
         <div>
           <a href="https://graphics-for-good.com"target="_blank" >
             <h3>Graphics for Good</h3>
@@ -20,9 +20,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://megangillespiemezzo.com/" target="_blank" class="image-link"></a>
+        <a href="https://megangillespiemezzo.com" target="_blank" class="image-link" />
         <div>
-          <a href="https://megangillespiemezzo.com/" target="_blank">
+          <a href="https://megangillespiemezzo.com" target="_blank">
             <h3>Megan Gillespie</h3>
           </a>
           <div class="description">
@@ -31,7 +31,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <!-- <div class="item">
-        <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link"></a>
+        <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank" class="image-link" />
         <div>
           <a href="projects/recipe-with-flexbox/oatmeal_cookies.html" target="_blank">
             <h3>Recipe with Flexbox</h3>
@@ -42,7 +42,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="projects/quotes-application.html" target="_blank" class="image-link"></a>
+        <a href="projects/quotes-application.html" target="_blank" class="image-link" />
         <div>
           <a href="projects/quotes-application.html" target="_blank">
             <h3>Quotes Application</h3>
@@ -53,7 +53,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="projects/temperature-converter/" target="_blank" class="image-link"></a>
+        <a href="projects/temperature-converter/" target="_blank" class="image-link" />
         <div>
           <a href="projects/temperature-converter/" target="_blank">
             <h3>Temperature Converter</h3>
@@ -64,7 +64,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="projects/rate.html" target="_blank" class="image-link"></a>
+        <a href="projects/rate.html" target="_blank" class="image-link" />
         <div>
           <a href="projects/rate.html" target="_blank">
             <h3>Product Rating</h3>
