--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,7 @@ import '../styles/list.scss'
 import '../styles/pages/projects.scss'
 
 import Layout from '../layouts/Layout.astro'
+import SiteGridContent from '../components/SiteGridContent.astro'
 ---
 <Layout title="Projects">
   <SiteGridContent>
