--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/list.scss'
+import '../styles/grid.scss'
 import '../styles/pages/projects.scss'
 
 import Layout from '../layouts/Layout.astro'
