--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -122,7 +122,9 @@
 
     &:is(:hover, :focus, :focus-visible, :focus-within), &:has(a:is(:focus-visible, :focus-within)) {
         & .image-link {
-            background-size: contain;
+            // background-size: contain;
+        }
+        & a:not(.image-link) {
             border-bottom: solid 1px var(--foreground-tertiary-color);
         }
 
