--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,7 +48,7 @@ main {
     }
 }
 
-main > #main-content {
+main > .main-content {
     flex: 1;
     width: 100%;
     height: 100%;
@@ -56,7 +56,9 @@ main > #main-content {
 
 .main-content {
     box-sizing: border-box;
-    padding: 8px;
+    &:not(.ignorePadding) {
+        padding: 8px;
+    }
 }
 
 hr[isDivider] {
