--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -39,8 +39,9 @@ main {
     max-width: 100%;
     min-height: 100%;
 
+    display: grid;
+
     hr {
-        margin-inline: auto;
         margin-inline: auto;
     }
     &:not(.isSoon) {
