--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -71,14 +71,19 @@ h1#page-title {
     margin: 0;
     border-bottom: 0.09375rem solid var(--background-secondary-color);
     border-radius: 0.5rem;
-    padding-top: 1.26375rem;
-    padding-bottom: 1.26375rem;
+    padding-block: 1.26375rem;
     text-align: center;
 }
-  
+
 h1, .heading-link {
     font-size: 2.5rem;
     text-decoration: none
+}
+
+h2 {
+    font-size: 2.5rem;
+    text-decoration: none;
+    padding-block: 1rem;
 }
 
 form {
