--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,7 +83,7 @@ h1, .heading-link {
 h2 {
     font-size: 2.5rem;
     text-decoration: none;
-    padding-block: 1rem;
+    margin-block: 1rem;
 }
 
 form {
