--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -71,7 +71,7 @@ h1#page-title {
     margin: 0;
     border-bottom: 0.09375rem solid var(--background-secondary-color);
     border-radius: 0.5rem;
-    padding-block: 1.26375rem;
+    margin-block: 1.26375rem;
     text-align: center;
 }
 
