--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -67,11 +67,11 @@ hr[isDivider] {
     padding-top: 1rem;
 }
   
-h1#page-title {
+h1.page-title {
     margin: 0;
     border-bottom: 0.09375rem solid var(--background-secondary-color);
     border-radius: 0.5rem;
-    margin-block: 1.26375rem;
+    padding-block: 1.26375rem;
     text-align: center;
 }
 
