--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -21,11 +21,6 @@ header .logo {
   background-repeat: no-repeat;
 
   border-radius: 100%;
-
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-
   transition: border-radius 1s ease-out;
 }
 
@@ -42,7 +37,7 @@ header .logo:is(:hover, :focus) {
   justify-content: flex-end;
   align-items: center;
 
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   gap: 15px;
 }
 
