--- a/src/styles/pages/videos.scss
+++ b/src/styles/pages/videos.scss
@@ -1,13 +1,13 @@
-section#videos {
+.videos {
     --gap: 25px;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, 1fr);
     padding: var(--gap);
     gap: var(--gap);
 }
   
-section#videos > iframe {
+.videos > iframe {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
