--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,6 +3,7 @@ header {
   padding: 2rem 4rem;
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
 
   flex-wrap: wrap;
@@ -31,15 +32,12 @@ header .logo:is(:hover, :focus) {
 }
 
 .nav {
-  flex: 1;
-
   height: 100%;
   
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
 
-  flex-wrap: wrap;
+  place-items: center;
   gap: 15px;
 }
 
