--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -62,6 +62,12 @@
             * {
                 box-sizing: border-box;
                 padding: calc(var(--gap)/2);
+                &:first-child {
+                    padding-bottom: 0;
+                }
+                &:last-child {
+                    padding-top: 0;
+                }
             }
         }
 
