--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -60,13 +60,15 @@
     & > div {
         &:not([paddingOnHover]) {
             * {
+                --val: 2;
                 box-sizing: border-box;
-                padding: calc(var(--gap)/2);
+                padding: calc(var(--gap)/var(--val));
+                gap: 0;
                 &:first-child {
-                    padding-bottom: 0;
+                    padding-bottom: calc(var(--gap)/var(--val)*2);
                 }
                 &:last-child {
-                    padding-top: 0;
+                    padding-top: calc(var(--gap)/var(--val)*2);
                 }
             }
         }
