--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -43,9 +43,8 @@
             background-size: contain;
         }
 
-        &:focus, &:focus-visible + div {
-            gap: calc(var(--gap)/2);
-
+        &:focus, &:focus-visible + div, 
+        div:has(a:is(:focus, &:focus-visible)) {
             & .description {
                 grid-template-rows: 1fr;
             }
@@ -59,36 +58,16 @@
 
     & > div {
         &:not([paddingOnHover]) {
-            * {
+            > * {
                 --val: 2;
                 box-sizing: border-box;
                 padding: calc(var(--gap)/var(--val));
                 gap: 0;
-                &:first-child {
-                    padding-bottom: calc(var(--gap)/( var(--val)*2));
-                }
-                &:last-child {
-                    padding-top: calc(var(--gap)/(var(--val)*2));
-                }
             }
         }
 
         display: flex;
         flex-direction: column;
-
-
-        &:has(a:is(:focus, &:focus-visible)) {
-            gap: calc(var(--gap)/2);
-
-            & .description {
-                grid-template-rows: 1fr;
-            }
-            & span {
-                height: auto;
-                visibility: unset;
-                margin-block: 0.5em;
-            }
-        }
     }
 
     & :is(h1, h2, h3, h4, h5, h6) {
