updatre projects.astro

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -147,7 +147,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
           </div>
         </div>
       </div>
-      <div class="item">
+      <!-- <div class="item">
         <a href="https://Cookie-Clicker.RockGamerAK.com" target="_blank" class="image-link" />
         <div>
           <a href="https://Cookie-Clicker.RockGamerAK.com" target="_blank">
@@ -157,7 +157,7 @@ import SiteGridContent from '../components/SiteGridContent.astro'
             <span>Play "Cookie Clicker" Online!</span>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="item">
         <a href="https://Pop-Ups.RockGamerAK.com" target="_blank" class="image-link" />
         <div>
