--- a/src/pages/videos.astro
+++ b/src/pages/videos.astro
@@ -1,9 +1,10 @@
 ---
+import '../styles/grid.scss'
 import '../styles/pages/videos.scss'
 
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Videos">
-  <section id="videos"></section>
+  <section id="videos" class="grid"></section>
   <script src="/videos.js" is:inline></script>
 </Layout>
