--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,22 +12,19 @@ var { logo } = Astro.props
         <button onclick="goToUrl(this)" data-href="/contact">Contact</button>
         <button onclick="goToUrl(this)" data-href="/portfolio">Portfolio</button>
         <button onclick="goToUrl(this)" data-href="/projects">Projects</button>
-        <button onclick="goToUrl(this)" data-data-href="https://Blog.RockGamerAK.com" data-target="_blank">Blog</button>
+        <button onclick="goToUrl(this)" data-href="https://Blog.RockGamerAK.com" data-target="_blank">Blog</button>
         <!-- <button onclick="goToUrl(this)" data-href="/sites">Sites</button> -->
         <button onclick="goToUrl(this)" data-href="/videos">Videos</button>
     </nav>
 </header>
 <script is:inline>
     function goToUrl(btn) {
-        console.log(btn)
         var link = btn
         var target = '_self'
         if (typeof link !== 'string') {
             link = btn.getAttribute('data-href')
             target = btn.getAttribute('data-target')
         }
-        console.log(link)
-        console.log(target)
         if (target === '_blank') {
             window.open(link)
         }
