--- a/src/styles/pages/videos.scss
+++ b/src/styles/pages/videos.scss
@@ -1,9 +1,9 @@
-.videos {
+.grid {
     width: 100%;
     grid-template-columns: repeat(auto-fit, minmax(316.6px, 1fr));
 }
 
-.videos > iframe {
+.grid > iframe {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
