--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import '../styles/globals.scss'
 import '../styles/root.scss'
 
 import Header from '../components/header.astro'
+import Sidebar from '../components/sidebar.astro'
 
 var sName = 'Adarsh Kumar'
 var logoSRC = '/logo.jpg'
@@ -42,6 +43,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <main id="content" align="center">
       <div class={className} style={inlineStyles}>
         <slot />
+        <Sidebar />
       </div>
     </main>
     <script src="/main.js" is:inline></script>
