add google api script, whopps...

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,5 +61,6 @@ if (className.startsWith(' ')) className = className.substring(1)
       })();
     </script>
     <!--End of Tawk.to Script-->
+    <script src="https://apis.google.com/js/platform.js"></script>
   </body>
 </html>
