--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,6 +47,10 @@ main {
     &:not(.isSoon) {
         margin: 0 !important;
     }
+    & ~ iframe {
+        border: none;
+        z-index: -1;
+    }
 }
 
 .main-content {
