--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -2,7 +2,7 @@
     flex: 1;
 
     display: grid;
-    grid-template-columns: 1fr 14rem;
+    grid-template-columns: 1fr 12rem;
 }
 
 .main-sidebar {
@@ -13,7 +13,7 @@
     gap: 1rem;  
 
     & > * {
-        aspect-ratio: 3 / 4;
+        height: fit-content;
     }
 }
 
