--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -4,4 +4,5 @@ import '../styles/components/sidebar.scss'
 <aside class="main-sidebar">
     <section class="channel-stats"></section>
 </aside>
+<script src="https://apis.google.com/js/platform.js"></script>
 <script src="/channels.js" is:inline></script>
