--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ if (className.startsWith(' ')) className = className.substring(1)
       </div>
     </main>
     <script src="/main.js" is:inline></script>
-    <script src="/eruda.js" is:inline></script>
+    <!-- <script src="/eruda.js" is:inline></script> -->
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -63,6 +63,5 @@ if (className.startsWith(' ')) className = className.substring(1)
       })();
     </script>
     <!--End of Tawk.to Script-->
-    <script src="https://apis.google.com/js/platform.js"></script>
   </body>
 </html>
