--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -33,7 +33,7 @@ body {
 }
 
 [aria-hidden="true"] {
-    display: none;
+    // display: none;
 }
 
 /* Styles for below the nav bar */
@@ -52,8 +52,7 @@ main {
         margin: 0 !important;
     }
     & ~ iframe {
-        border: none;
-        z-index: -1;
+        display: none;
     }
 }
 
