--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -32,9 +32,9 @@ body {
     flex-direction: column;
 }
 
-[aria-hidden="true"] {
-    // display: none;
-}
+// [aria-hidden="true"] {
+//     // display: none;
+// }
 
 /* Styles for below the nav bar */
 main {
