--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -37,6 +37,7 @@
         border-radius: 5px;
 
         display: grid;
+        grid-template-rows: subgrid;
         place-items: center;
 
         overflow: hidden;
