--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 
 const allPosts = await Astro.glob('../posts/*.md')
 ---
-<Layout title="Contact">
+<Layout title="Blog">
   <section class="posts">
     {
       allPosts.map((post) => {
